--- a/SMR description.html
+++ b/SMR description.html
@@ -32,3 +32,4 @@ All meshes are based from the original ones from the game; no content was copied
 <img src="https://raw.githubusercontent.com/MarcioHuser/WallConveyorSupports-SML3/master/Content/Icons/WallConveyor13-512.png" width="512" />
 <img src="https://raw.githubusercontent.com/MarcioHuser/WallConveyorSupports-SML3/master/Content/Icons/WallConveyor2-512.png" width="512" />
 <img src="https://raw.githubusercontent.com/MarcioHuser/WallConveyorSupports-SML3/master/Content/Icons/WallConveyor3-512.png" width="512" />
+<img src="https://raw.githubusercontent.com/MarcioHuser/WallConveyorSupports-SML3/master/Pictures/WallConveyorSupports-showcase.png" width="512" />
