- Version 1.0.1 	- Fix categoriation for the milestone at the AWESOME Shop

--- a/SMR description.html
+++ b/SMR description.html
@@ -5,7 +5,7 @@ Answaring requests to continue/remake the now discontinued <a href="https://fics
 - One with two conveyor connections, close to the wall
 - One with a single conveyor connection, 6 m away from the wall
 - One with a single conveyor connection, 4 m away from the wall
-- The milestone for will be available at the Awesome Shop, for 12 coupons
+- The milestone for will be available at the AWESOME Shop, for 12 coupons
 
 <img alt="Multiplayer compatible" src="https://raw.githubusercontent.com/deantendo/community/master/com_mp_yes.png"/>
 <br/>
@@ -18,6 +18,9 @@ Find me at <a href="https://discord.gg/A9bFvkbav4">Satisfactory Modding</a> Disc
 
 
 ### Changelog
+- Version 1.0.1
+	- Fix categoriation for the milestone at the AWESOME Shop
+
 - Version 1.0.0
 	- Initial Release
 
@@ -26,10 +29,11 @@ Icons by Deantendo#4265
 
 All meshes are based from the original ones from the game; no content was copied from any other mod
 
+<img src="https://raw.githubusercontent.com/MarcioHuser/WallConveyorSupports-SML3/master/Pictures/AWESOME-shop.png" width="512" />
+<img src="https://raw.githubusercontent.com/MarcioHuser/WallConveyorSupports-SML3/master/Pictures/WallConveyorSupports-showcase.png" width="512" />
 <img src="https://raw.githubusercontent.com/MarcioHuser/WallConveyorSupports-SML3/master/Content/Icons/WallConveyor123-512.png" width="512" />
 <img src="https://raw.githubusercontent.com/MarcioHuser/WallConveyorSupports-SML3/master/Content/Icons/WallConveyor12-512.png" width="512" />
 <img src="https://raw.githubusercontent.com/MarcioHuser/WallConveyorSupports-SML3/master/Content/Icons/WallConveyor23-512.png" width="512" />
 <img src="https://raw.githubusercontent.com/MarcioHuser/WallConveyorSupports-SML3/master/Content/Icons/WallConveyor13-512.png" width="512" />
 <img src="https://raw.githubusercontent.com/MarcioHuser/WallConveyorSupports-SML3/master/Content/Icons/WallConveyor2-512.png" width="512" />
 <img src="https://raw.githubusercontent.com/MarcioHuser/WallConveyorSupports-SML3/master/Content/Icons/WallConveyor3-512.png" width="512" />
-<img src="https://raw.githubusercontent.com/MarcioHuser/WallConveyorSupports-SML3/master/Pictures/WallConveyorSupports-showcase.png" width="512" />
