- Version 1.0.1 	- Fix categorization for the milestone at the AWESOME Shop

--- a/SMR description.html
+++ b/SMR description.html
@@ -19,7 +19,7 @@ Find me at <a href="https://discord.gg/A9bFvkbav4">Satisfactory Modding</a> Disc
 
 ### Changelog
 - Version 1.0.1
-	- Fix categoriation for the milestone at the AWESOME Shop
+	- Fix categorization for the milestone at the AWESOME Shop
 
 - Version 1.0.0
 	- Initial Release
