--- a/SMR description.html
+++ b/SMR description.html
@@ -18,6 +18,9 @@ Find me at <a href="https://discord.gg/A9bFvkbav4">Satisfactory Modding</a> Disc
 
 
 ### Changelog
+- Version 1.0.2
+	- Fixed wrong clearence that allowed for multiple belt connections to the same pole
+
 - Version 1.0.1
 	- Fix categorization for the milestone at the AWESOME Shop
 
