- Version 1.0.3 	- Fixed the ability to snap into foundations. 		- WARNING: snapping to foundations does not garantee the correct alignment of belts as it would when snapping with walls. That is a game issue, not a mod issue

--- a/SMR description.html
+++ b/SMR description.html
@@ -18,6 +18,10 @@ Find me at <a href="https://discord.gg/A9bFvkbav4">Satisfactory Modding</a> Disc
 
 
 ### Changelog
+- Version 1.0.3
+	- Fixed the ability to snap into foundations.
+		- WARNING: snapping to foundations does not garantee the correct alignment of belts as it would when snapping with walls. That is a game issue, not a mod issue 
+
 - Version 1.0.2
 	- Fixed wrong clearence that allowed for multiple belt connections to the same pole
 
