--- a/SMR description.html
+++ b/SMR description.html
@@ -18,6 +18,9 @@ Find me at <a href="https://discord.gg/A9bFvkbav4">Satisfactory Modding</a> Disc
 
 
 ### Changelog
+- Version 1.1.1
+	- Adjusted schematics to be available at the Awesome Shop at the same category as the respective vanila wall support
+
 - Version 1.1.0
 	- Update 5
 
