--- a/SMR description.html
+++ b/SMR description.html
@@ -1,4 +1,6 @@
-Answaring requests to continue/remake the now discontinued <a href="https://ficsit.app/mod/9MtaC1dPA4cANb">Wall Conveyors mod</a>, this mod adds six new wall conveyor support variations:
+<h1 style="color: red">The latest version is compatible with Update 8.2</h1>
+
+Answering requests to continue/remake the now discontinued <a href="https://ficsit.app/mod/9MtaC1dPA4cANb">Wall Conveyors mod</a>, this mod adds six new wall conveyor support variations:
 - One with three conveyor connections side by side
 - One with two conveyor connections, with gap between the two connections
 - One with two conveyor connections, far from the wall
@@ -11,7 +13,11 @@ Answaring requests to continue/remake the now discontinued <a href="https://fics
 <br/>
 <br/>
 
-Find me at <a href="https://discord.gg/A9bFvkbav4">Satisfactory Modding</a> Discord server (MarcioHuser#2377)
+This mod is completely free. But if you wish to donate a value as a “thank you”, feel free to click on the button below.
+
+<a href="https://www.paypal.com/donate/?business=Y4X6QWYA9QYAU&no_recurring=1" target="_blank"><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" ></a>
+
+Find me at <a href="https://discord.gg/A9bFvkbav4">Satisfactory Modding</a> Discord server (@MarcioHuser)
 
 <br/>
 <br/>
