--- a/WallConveyorSupports - SMR description.html
+++ b/WallConveyorSupports - SMR description.html
@@ -24,6 +24,9 @@ Find me at <a href="https://discord.gg/A9bFvkbav4">Satisfactory Modding</a> Disc
 
 
 ### Changelog
+- Version 1.2.2
+	- Mod updated due to changes in MarcioCommonLibs
+
 - Version 1.2.1
 	- Mod updated due to changes in MarcioCommonLibs
 
