Updates to 1.0 and general fixes

--- a/WallConveyorSupports - SMR description.html
+++ b/WallConveyorSupports - SMR description.html
@@ -7,7 +7,7 @@ Answering requests to continue/remake the now discontinued <a href="https://fics
 - One with two conveyor connections, close to the wall
 - One with a single conveyor connection, 6 m away from the wall
 - One with a single conveyor connection, 4 m away from the wall
-- The milestone for will be available at the AWESOME Shop, for 12 coupons
+- The milestone for will be available at the AWESOME Shop, for 6 coupons
 
 <img alt="Multiplayer compatible" src="https://raw.githubusercontent.com/deantendo/community/master/com_mp_yes.png"/>
 <br/>
@@ -24,6 +24,10 @@ Find me at <a href="https://discord.gg/A9bFvkbav4">Satisfactory Modding</a> Disc
 
 
 ### Changelog
+- Version 1.3.0
+	- Satisfactory 1.0 and SML 3.8.0
+	- Reduced the cost of purchased to 6 coupons
+
 - Version 1.2.2
 	- Mod updated due to changes in MarcioCommonLibs
 
