--- a/WallConveyorSupports - SMR description.html
+++ b/WallConveyorSupports - SMR description.html
@@ -1,5 +1,3 @@
-<h1 style="color: red">The latest version is compatible with Update 8.2</h1>
-
 Answering requests to continue/remake the now discontinued <a href="https://ficsit.app/mod/9MtaC1dPA4cANb">Wall Conveyors mod</a>, this mod adds six new wall conveyor support variations:
 - One with three conveyor connections side by side
 - One with two conveyor connections, with gap between the two connections
@@ -24,6 +22,9 @@ Find me at <a href="https://discord.gg/A9bFvkbav4">Satisfactory Modding</a> Disc
 
 
 ### Changelog
+- Version 1.3.1
+	- Recompiled due to new game patch
+
 - Version 1.3.0
 	- Satisfactory 1.0 and SML 3.8.0
 	- Reduced the cost of purchased to 6 coupons
