--- a/WallConveyorSupports - SMR description.html
+++ b/WallConveyorSupports - SMR description.html
@@ -1,3 +1,6 @@
+How to get it:
+- After you purchase the vanilla wall support, the set from this mod will be released for purchase, too. Just close and reopen the shop and they will be there
+
 Answering requests to continue/remake the now discontinued <a href="https://ficsit.app/mod/9MtaC1dPA4cANb">Wall Conveyors mod</a>, this mod adds six new wall conveyor support variations:
 - One with three conveyor connections side by side
 - One with two conveyor connections, with gap between the two connections
@@ -22,6 +25,10 @@ Find me at <a href="https://discord.gg/A9bFvkbav4">Satisfactory Modding</a> Disc
 
 
 ### Changelog
+- Version 1.3.2
+	- Recompiled to keep compatible with MarcioCommonLibs
+	- Recompiled due to new game patch
+
 - Version 1.3.1
 	- Recompiled due to new game patch
 
